--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,72 @@
-html {
-    font-size: 2rem;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-button {
-    font-size: inherit;
+:root {
+    --BUTTON-ZISE: 5rem;
+}
+
+html {
+    font-size: 1.2rem;
+}
+
+main {
+    text-align: center;
+}
+
+.word {
+    font-size: 3rem;
+}
+
+.transc {
+    font-size: 1.5rem;
+}
+
+.transl {
+    font-size: 2rem;
+    margin: 0.5rem 0 0.5rem;
+}
+
+.example {
+    font-size: 2rem;
+    font-style: italic;
+}
+
+button.reset {
+    position: fixed;
+    bottom: var(--BUTTON-ZISE);
+}
+
+.navig {
+    position: fixed;
+    /* position: sticky; */
+    bottom: 0;
+
+    height: 5rem;
+    width: 100%;
+
+    display: flex;
+}
+
+.eval {
+    flex-basis: 15rem;
+    flex-grow: 1;
+
+    display: flex;
+}
+
+.navig button {
+    flex-basis: 5rem;
+    flex-grow: 1;
+    margin: 0.5rem;
+}
+
+button.good {
+    background: green;
+}
+
+button.bad {
+    background: red;
 }
