--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,16 +8,16 @@
     --BUTTON-ZISE: 5rem;
 }
 
-html {
+/* html {
     font-size: 1.2rem;
-}
+} */
 
 main {
     text-align: center;
 }
 
 .word {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .transc {
@@ -25,18 +25,21 @@ main {
 }
 
 .transl {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0.5rem 0 0.5rem;
 }
 
 .example {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-style: italic;
 }
 
-button.reset {
+.reset {
     position: fixed;
     bottom: var(--BUTTON-ZISE);
+    margin-left: 0.5rem;
+    font-size: 3rem;
+    color: red;
 }
 
 .navig {
