--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,13 @@
     font-size: 1.2rem;
 } */
 
+header {
+    margin: 0.5rem;   
+    margin-bottom: 0;  
+}
+
 main {
+    margin: 0.5rem;
     text-align: center;
 }
 
@@ -47,21 +53,21 @@ main {
     /* position: sticky; */
     bottom: 0;
 
-    height: 5rem;
+    height: var(--BUTTON-ZISE);
     width: 100%;
 
     display: flex;
 }
 
 .eval {
-    flex-basis: 15rem;
+    flex-basis: var(--BUTTON-ZISE);
     flex-grow: 1;
 
     display: flex;
 }
 
 .navig button {
-    flex-basis: 5rem;
+    flex-basis: var(--BUTTON-ZISE);
     flex-grow: 1;
     margin: 0.5rem;
 }
