--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,17 +8,30 @@
     --BUTTON-ZISE: 6rem;
 }
 
-/* html {
-    font-size: 1.2rem;
-} */
-
 header {
     margin: 0.5rem;   
     margin-bottom: 0;  
 }
 
+.playButton {
+    position: absolute;
+    top: 1.5rem;
+    left: 50%;
+    font-size: 2rem;
+}
+
+.second-line {
+    display: flex;
+    justify-content: space-between;
+}
+
+.persentage {
+    font-weight: bold;
+}
+
 main {
     margin: 0.5rem;
+    margin-top: 1rem;
     text-align: center;
 }
 
@@ -70,11 +83,23 @@ main {
     flex-basis: var(--BUTTON-ZISE);
     flex-grow: 1;
     margin: 0.5rem;
+    border-radius: 1rem;
+    border: none;
+    background: gray;
+}
+
+.navig button:active {
+    background: yellow;
+    border: 2px solid black;
 }
 
 button.good {
     background: green;
 }
+
+/* button.neutral {
+    background: gray;
+} */
 
 button.bad {
     background: red;
