--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,8 +15,9 @@ header {
 
 .playButton {
     position: absolute;
-    top: 1.5rem;
-    left: 50%;
+    top: 1.6rem;
+    width: 100%;
+    text-align: center;
     font-size: 2rem;
 }
 
@@ -31,7 +32,7 @@ header {
 
 main {
     margin: 0.5rem;
-    margin-top: 1rem;
+    margin-top: 1.3rem;
     text-align: center;
 }
 
